feat: add header and hero section

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,25 @@
 <header class="header">
 	<div class="header__container">
+		<div class="header__menu menu">
+			<button type="button" class="menu__icon icon-menu"><span></span></button>
+			<nav class="menu__body">
+				<ul class="menu__list">
+					<li class="menu__item"><a href="" class="menu__link">Furniture</a></li>
+					<li class="menu__item"><a href="" class="menu__link">Why Feather</a></li>
+					<li class="menu__item"><a href="" class="menu__link">Feather for Business</a></li>
+				</ul>
+			</nav>
+		</div>
+		<a href="#" class="header__logo" aria-label="Logo feather"><img src="@img/logo.svg" alt="feather"></a>
+		<div class="header__links">
+			<a href="#" class="header__link">Check if We Deliver</a>
+			<a href="#" class="header__link">Search</a>
+			<a href="#" class="header__link">Account</a>
+			<a href="#" class="header__link" aria-label="Go to cart">
+				<svg class="header__cart">
+					<use xlink:href="@img/icons/icons.svg#cart"></use>
+				</svg>
+			</a>
+		</div>
 	</div>
 </header>
